fix photo sidebar uneven transform

--- a/photo-styles.css
+++ b/photo-styles.css
@@ -1,146 +1,145 @@
 * {
-    box-sizing: content-box;
+  box-sizing: content-box;
 }
 
 body {
-    overflow-y: hidden;
+  overflow-y: hidden;
 }
 
 .sidebar {
-    height: 100%;
-    width: 160px;
-    position: relative;
-    z-index: 1;
-    left: 0;
-    background-color: var(--main-color);
-    /* padding-top: 20px; */
-    transition: all 0.3s ease;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    padding-right: 50px;
+  height: 100%;
+  width: 160px;
+  position: relative;
+  z-index: 1;
+  left: 0;
+  background-color: var(--main-color);
+  /* padding-top: 20px; */
+  transition: all 0.3s ease;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  padding-right: 50px;
 }
 
 .sidebar a {
-    padding: 6px 8px 6px 16px;
-    text-decoration: none;
-    font-size: 25px;
-    color: var(--accent-color);
-    display: block;
-    transition: all 0.3s ease;
-    float: left;
-    padding-right: 20px;
+  padding: 6px 8px 6px 16px;
+  text-decoration: none;
+  font-size: 25px;
+  color: var(--accent-color);
+  display: block;
+  transition: all 0.3s ease;
+  float: left;
+  padding-right: 20px;
 }
 
 .sidebar ul {
-    list-style: none;
-    padding: 0;
+  list-style: none;
+  padding: 0;
 }
 
 .sidebar li {
-    transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 
+/* TODO  fix uneven transform*/
+
 .sidebar li:hover {
-    opacity: 1;
-    transform: scale(1.09);
-    transform-origin: center top; 
+  opacity: 1;
+  transform: scale(1.09);
+  transform-origin: center;
+  /* transform-origin: center top;  */
 }
 
 .sidebar ul:hover li:not(:hover) {
-    opacity: 0.1;
+  opacity: 0.1;
 }
 
 .slide {
-    display: none;
+  display: none;
 }
 
 .container {
-    display: flex;
+  display: flex;
 }
 
 .picture_container {
-    position: relative;
-    margin: auto;
-    /* width: 1440px; */
-    height: auto;
-    opacity: 0.95;
-    flex-grow: 1;
-    flex-wrap: wrap;
-    gap: 20px;
+  position: relative;
+  margin: auto;
+  /* width: 1440px; */
+  height: auto;
+  opacity: 0.95;
+  flex-grow: 1;
+  flex-wrap: wrap;
+  gap: 20px;
 }
 
 .prev,
 .next {
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
-    width: auto;
-    /* margin-top: -22px; */
-    padding: 16px;
-    color: var(--accent-color);
-    font-weight: bold;
-    font-size: 30px;
-    transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
-    user-select: none;
-
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  /* margin-top: -22px; */
+  padding: 16px;
+  color: var(--accent-color);
+  font-weight: bold;
+  font-size: 30px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
 }
 
 .next {
-    right: 0;
-    border-radius: 3px 0 0 3px;
+  right: 0;
+  border-radius: 3px 0 0 3px;
 }
 
 .prev {
-    left: 15%;
-    border-radius: 3px 0 0 3px;
+  left: 15%;
+  border-radius: 3px 0 0 3px;
 }
 
 img {
-    object-fit: cover;
-    max-width: 80vw;
-    height: auto;
+  object-fit: cover;
+  max-width: 80vw;
+  height: auto;
 }
 
 .caption {
-    position: absolute;
-    bottom: 8px;
-    right: 16px;
-    color: var(--accent-color);
-    text-align: right;
-    font-size: 15px;
-    margin-top: -10px;
+  position: absolute;
+  bottom: 8px;
+  right: 16px;
+  color: var(--accent-color);
+  text-align: right;
+  font-size: 15px;
+  margin-top: -10px;
 }
 
 .fade {
-    animation-name: fade;
-    animation-duration: 1.3s;
+  animation-name: fade;
+  animation-duration: 1.3s;
 }
 
 @keyframes fade {
-    from {
-        opacity: .4
-    }
+  from {
+    opacity: 0.4;
+  }
 
-    to {
-        opacity: 1
-    }
+  to {
+    opacity: 1;
+  }
 }
 
 .stroke {
-    color: var(--accent-color);
-    text-shadow:
-        -1px -1px 0 var(--main-color),
-        1px -1px 0 var(--main-color),
-        -1px 1px 0 var(--main-color),
-        1px 1px 0 var(--main-color);
+  color: var(--accent-color);
+  text-shadow: -1px -1px 0 var(--main-color), 1px -1px 0 var(--main-color),
+    -1px 1px 0 var(--main-color), 1px 1px 0 var(--main-color);
 }
 
 .btn.active {
-    text-decoration: underline;
-    text-underline-offset: 8px;
+  text-decoration: underline;
+  text-underline-offset: 8px;
 }
 
 .hidden {
-    display: none;
+  display: none;
 }
